objects/Opportunity_Recurring_Offers__c.object
<CustomObject>
    <fields>
        <fullName>Extended_Net_Amount__c</fullName>
        <description>Quote Integration: Extended Net Amount of Offer
CCW Payload Mapping : offerDetails.parentOfferType.subOfferType.netPrice</description>
        <label>Extended Net Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Quote Integration: Reference to Opportunity</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Recurring Offers</relationshipLabel>
        <relationshipName>Opportunity_Recurring_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <description>Quote Integration: Quote Id associated to Offer
CCW Payload Mapping : eventDetails.quoteId</description>
        <label>Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_Flag__c</fullName>
        <description>Quote Integration: Recurring Offer Flag
CCW Payload Mapping : offerDetails.parentOfferType.subOfferType.recurringFlag</description>
        <label>RO Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Offer_Type__c</fullName>
        <description>Quote Integration: Sub Offer Type Name
CCW Payload Mapping : offerDetails.parentOfferType.subOfferType.name</description>
        <label>Sub Offer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Quote Integration: Offer Header Information as part of BOM Integration
CCW Payload: offerDetails</description>
    <label>Opportunity Recurring Offers</label>
    <nameField>
        <label>Opportunity Recurring Offers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Recurring Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>